force-app/main/default/objects/Station__c/fields/Assigned_Order__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Order__c</fullName>
    <label>Assigned Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>