force-app/main/default/objects/Station__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Stations</relationshipLabel>
    <relationshipName>Stations</relationshipName>
    <type>Lookup</type>
</CustomField>