force-app/main/default/objects/Station__c/fields/Rank_Preference__c.field-meta.xml
<CustomField>
    <fullName>Rank_Preference__c</fullName>
    <label>Rank Preference</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>