force-app/main/default/objects/Station__c/recordTypes/Program_Station.recordType-meta.xml
<RecordType>
    <fullName>Program_Station</fullName>
    <active>true</active>
    <description>Stations that are available to a program</description>
    <label>Program Station</label>
</RecordType>