force-app/main/default/objects/Station__c/recordTypes/Station_Selection.recordType-meta.xml
<RecordType>
    <fullName>Station_Selection</fullName>
    <active>true</active>
    <description>Stations ranked and assigned for a program engagement</description>
    <label>Station Selection</label>
</RecordType>