force-app/main/default/objects/Station__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Program__c</columns>
    <columns>Program_Engagement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>